[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phper = "0.12.0"
serde_json = "1.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[lib]
name = "hello"
crate-type = ["lib", "cdylib"]
