[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ext-php-rs = "0.10.1"
image = "0.24.7"
serde_json = "1.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[lib]
name = "hello"
crate-type = ["lib", "cdylib"]
